--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -5,8 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/image"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/animatedImage"
         android:layout_height="100dp"
         android:layout_width="100dp"
 
