--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+                                              xmlns:app="http://schemas.android.com/apk/res-auto"
+                                              xmlns:tools="http://schemas.android.com/tools"
 
-            style="?colorAppBackground"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="right"
-            android:orientation="vertical"
-            android:weightSum="7"
+                                              style="?colorAppBackground"
+                                              android:layout_width="fill_parent"
+                                              android:layout_height="fill_parent"
+                                              android:gravity="right"
+                                              android:orientation="vertical"
+                                              android:weightSum="7"
 
-            tools:context=".MainActivity"
+                                              tools:context=".MainActivity"
 
             >
 
 
 
-             <android.support.v4.widget.DrawerLayout
+             <androidx.drawerlayout.widget.DrawerLayout
 
-                android:id="@+id/drawer_layout"
+                android:id="@+id/drawerLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -42,7 +42,7 @@
 
 
                 <TextView
-                    android:id="@+id/operation_line"
+                    android:id="@+id/operationLine"
                     style="?colorDisplayText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
                     android:background="@android:color/black" />
 
                 <TextView
-                    android:id="@+id/result_line"
+                    android:id="@+id/resultLine"
                     style="?colorDisplayText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -288,17 +288,17 @@
                 </LinearLayout>
 
             </LinearLayout>
-                 <ListView
-                         android:id="@+id/navList"
-                         android:layout_width="200dp"
-                         android:layout_height="match_parent"
-                         android:layout_gravity="left|start"
-                         android:background="#ffeeeeee" android:clickable="true"/>
+    <ListView
+        android:id="@+id/drawerList"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:background="#ffeeeeee"/>
 
-    </android.support.v4.widget.DrawerLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
 
 
-        </android.support.v7.widget.LinearLayoutCompat>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
 
     <!-- Side navigation drawer UI -->
