--- a/app/src/main/res/drawable/button_delete.xml
+++ b/app/src/main/res/drawable/button_delete.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle" >
-<solid
-    style="?colorBackgroundDeleteButton"
-    />
 
+    <solid
+            android:color="@color/colorBackgroundDeleteButton"
+    />
 <padding
     android:bottom="2dp"
     android:left="5dp"
@@ -14,6 +14,6 @@ android:shape="rectangle" >
 
     <stroke
         android:width="4dp"
-        style="?colorOutlineButton" />
+        android:color="@color/colorDisplayText" />
 
 </shape>
