--- a/app/src/main/res/drawable/button_number.xml
+++ b/app/src/main/res/drawable/button_number.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <solid
-        style="?colorBackgroundButton"
+            android:color="@color/colorBackgroundButton"
         />
 
     <padding
@@ -14,7 +14,7 @@
 
     <stroke
         android:width="4dp"
-        style="?colorOutlineButton" />
+        android:color="@color/colorDisplayText" />
 
 
 </shape>
