--- a/app/src/main/res/drawable/button_operation.xml
+++ b/app/src/main/res/drawable/button_operation.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <solid
-        style="?colorBackgroundOperationButton"
+        android:color="@color/colorBackgroundOperationButton"
         />
 
     <padding
@@ -14,6 +14,6 @@
 
     <stroke
         android:width="4dp"
-        style="?colorOutlineButton" />
+        android:color="@color/colorDisplayText" />
 
 </shape>
