--- a/app/src/main/res/layout/activity_dark.xml
+++ b/app/src/main/res/layout/activity_dark.xml
@@ -4,32 +4,32 @@
 
                                               xmlns:tools="http://schemas.android.com/tools"
 
-                                              style="@style/colorAppBackgroundLight"
+                                              style="@style/colorAppBackgroundDarkT"
                                               android:layout_width="fill_parent"
                                               android:layout_height="fill_parent"
-                                              android:gravity="end"
+                                              android:gravity="right"
                                               android:orientation="vertical"
                                               android:weightSum="7"
 
                                               tools:context=".MainActivity"
 
-            >
+>
 
 
 
-             <androidx.drawerlayout.widget.DrawerLayout
+    <androidx.drawerlayout.widget.DrawerLayout
 
-                android:id="@+id/drawerLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-
+            android:id="@+id/drawerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
 
 
 
-            <LinearLayout
+
+
+        <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="2"
@@ -38,9 +38,9 @@
                 android:padding="0dp">
 
 
-                <TextView
+            <TextView
                     android:id="@+id/operationLine"
-                    style="@style/colorDisplayTextLight"
+                    style="@style/colorDisplayTextDarkT"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -48,14 +48,14 @@
                     android:text="@string/_0"
                     android:textSize="40sp" />
 
-                <View
+            <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="@android:color/black" />
 
-                <TextView
+            <TextView
                     android:id="@+id/resultLine"
-                    style="@style/colorDisplayTextLight"
+                    style="@style/colorDisplayTextDarkT"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
@@ -65,10 +65,10 @@
                     android:text="@string/_0"
                     android:textSize="70sp" />
 
-            </LinearLayout>
+        </LinearLayout>
 
 
-            <LinearLayout
+        <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="5"
@@ -78,172 +78,172 @@
                 android:baselineAligned="false">
 
 
-                <LinearLayout
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <Button
+                <Button
                         android:id="@+id/btn_delete"
-                        style="@style/buttonDeleteLight"
+                        style="@style/buttonDeleteDarkT"
 
                         android:maxLines="1"
                         android:onClick="resetClick"
                         android:text="@string/ac"
 
-                        />
+                />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_seven"
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
 
                         android:onClick="onNumberClick"
                         android:text="@string/_7"
 
 
-                        />
+                />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_four"
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
                         android:onClick="onNumberClick"
                         android:text="@string/_4" />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_one"
 
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
                         android:onClick="onNumberClick"
                         android:text="@string/_1" />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_zero"
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
                         android:onClick="onNumberClick"
                         android:text="@string/_0" />
 
 
-                </LinearLayout>
+            </LinearLayout>
 
 
-                <LinearLayout
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
 
-                    <Button
+                <Button
                         android:id="@+id/btn_percentage"
-                        style="@style/buttonOperationPercentageLight"
+                        style="@style/buttonOperationPercentageDarkT"
 
 
                         android:text="@string/_Percent"
 
 
-                        />
+                />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_eight"
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
                         android:onClick="onNumberClick"
                         android:text="@string/_8"
 
 
-                        />
+                />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_five"
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
                         android:onClick="onNumberClick"
                         android:text="@string/_5" />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_two"
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
                         android:onClick="onNumberClick"
                         android:text="@string/_2" />
 
 
-                    <Button
+                <Button
                         android:id="@+id/btn_dot"
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
                         android:onClick="onNumberClick"
                         android:text="@string/_Dot"
 
 
-                        />
+                />
 
 
-                </LinearLayout>
+            </LinearLayout>
 
 
-                <LinearLayout
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
 
-                    <Button
+                <Button
                         android:id="@+id/btn_divide"
-                        style="@style/buttonOperationDivideLight"
+                        style="@style/buttonOperationDivideDarkT"
 
                         android:text="@string/_Divide"
 
-                        />
+                />
 
 
-                    <Button
+                <Button
                         android:id="@+id/btn_nine"
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
                         android:onClick="onNumberClick"
                         android:text="@string/_9"
 
 
-                        />
+                />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_six"
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
                         android:onClick="onNumberClick"
                         android:text="@string/_6"
 
-                        />
+                />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_three"
-                        style="@style/buttonNumberLight"
+                        style="@style/buttonNumberDarkT"
 
                         android:onClick="onNumberClick"
                         android:text="@string/_3"
 
-                        />
+                />
 
 
-                    <Button
+                <Button
                         android:id="@+id/btn_back"
-                        style="@style/buttonDeleteLight"
+                        style="@style/buttonDeleteDarkT"
 
                         android:onClick="backspaceClick"
                         android:text="@string/_Backspace" />
 
 
-                </LinearLayout>
+            </LinearLayout>
 
 
-                <LinearLayout
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -251,51 +251,51 @@
                     android:weightSum="5">
 
 
-                    <Button
+                <Button
                         android:id="@+id/btn_multiple"
-                        style="@style/buttonOperationMultiplyLight"
+                        style="@style/buttonOperationMultiplyDarkT"
 
                         android:text="@string/_Multiple" />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_minus"
 
-                        style="@style/buttonOperationMinusLight"
+                        style="@style/buttonOperationMinusDarkT"
 
 
                         android:text="@string/_Minus" />
 
-                    <Button
+                <Button
                         android:id="@+id/btn_plus"
-                        style="@style/buttonOperationPlusLight"
+                        style="@style/buttonOperationPlusDarkT"
 
 
                         android:text="@string/_Plus" />
 
 
-                    <Button
+                <Button
                         android:id="@+id/btn_equal"
-                        style="@style/buttonOperationEqualLight"
+                        style="@style/buttonOperationEqualDarkT"
 
                         android:text="@string/_Equal"
 
-                        />
+                />
 
-
-                </LinearLayout>
 
             </LinearLayout>
-    <ListView
-        android:id="@+id/drawerList"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#ffeeeeee"/>
+
+        </LinearLayout>
+        <ListView
+                android:id="@+id/drawerList"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:background="#ffeeeeee"/>
 
     </androidx.drawerlayout.widget.DrawerLayout>
 
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.appcompat.widget.LinearLayoutCompat>
 
 
 
