--- a/app/src/main/res/drawable/button_main_number_dark.xml
+++ b/app/src/main/res/drawable/button_main_number_dark.xml
@@ -1,4 +1,4 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="colorPrimaryDarkT">
+        android:color="@color/colorPrimaryDarkT">
     <item android:drawable="@drawable/button_number_dark" />
 </ripple>
