Navigation graph added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,303 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-
-                                              xmlns:tools="http://schemas.android.com/tools"
-
-                                              style="@style/colorAppBackgroundLight"
-                                              android:layout_width="fill_parent"
-                                              android:layout_height="fill_parent"
-                                              android:gravity="end"
-                                              android:orientation="vertical"
-                                              android:weightSum="7"
-
-                                              tools:context=".MainActivity"
-
-            >
-
-
-
-             <androidx.drawerlayout.widget.DrawerLayout
-
-                android:id="@+id/drawerLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-
-
-
-
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="2"
-                android:gravity="end"
-                android:orientation="vertical"
-                android:padding="0dp">
-
-
-                <TextView
-                    android:id="@+id/operationLine"
-                    style="@style/colorDisplayTextLight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:fontFamily="@font/ds"
-
-                    android:textSize="40sp" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:background="@android:color/black" />
-
-                <TextView
-                    android:id="@+id/resultLine"
-                    style="@style/colorDisplayTextLight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:fontFamily="@font/ds"
-                    android:letterSpacing="-0.02"
-                    android:singleLine="true"
-
-                    android:textSize="70sp" />
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="0dp"
-                android:layout_weight="5"
-                android:gravity="bottom"
-                android:orientation="horizontal"
-                android:weightSum="4"
-                android:baselineAligned="false">
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <Button
-                        android:id="@+id/btn_delete"
-                        style="@style/buttonDeleteLight"
-
-                        android:maxLines="1"
-                        android:onClick="resetClick"
-                        android:text="@string/ac"
-
-                        />
-
-                    <Button
-                        android:id="@+id/btn_seven"
-                        style="@style/buttonNumberLight"
-
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_7"
-
-
-                        />
-
-                    <Button
-                        android:id="@+id/btn_four"
-                        style="@style/buttonNumberLight"
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_4" />
-
-                    <Button
-                        android:id="@+id/btn_one"
-
-                        style="@style/buttonNumberLight"
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_1" />
-
-                    <Button
-                        android:id="@+id/btn_zero"
-                        style="@style/buttonNumberLight"
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_0" />
-
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-
-                    <Button
-                        android:id="@+id/btn_percentage"
-                        style="@style/buttonOperationPercentageLight"
-
-
-                        android:text="@string/_Percent"
-
-
-                        />
-
-                    <Button
-                        android:id="@+id/btn_eight"
-                        style="@style/buttonNumberLight"
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_8"
-
-
-                        />
-
-                    <Button
-                        android:id="@+id/btn_five"
-                        style="@style/buttonNumberLight"
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_5" />
-
-                    <Button
-                        android:id="@+id/btn_two"
-                        style="@style/buttonNumberLight"
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_2" />
-
-
-                    <Button
-                        android:id="@+id/btn_dot"
-                        style="@style/buttonNumberLight"
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_Dot"
-
-
-                        />
-
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-
-                    <Button
-                        android:id="@+id/btn_divide"
-                        style="@style/buttonOperationDivideLight"
-
-                        android:text="@string/_Divide"
-
-                        />
-
-
-                    <Button
-                        android:id="@+id/btn_nine"
-                        style="@style/buttonNumberLight"
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_9"
-
-
-                        />
-
-                    <Button
-                        android:id="@+id/btn_six"
-                        style="@style/buttonNumberLight"
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_6"
-
-                        />
-
-                    <Button
-                        android:id="@+id/btn_three"
-                        style="@style/buttonNumberLight"
-
-                        android:onClick="onNumberClick"
-                        android:text="@string/_3"
-
-                        />
-
-
-                    <Button
-                        android:id="@+id/btn_back"
-                        style="@style/buttonDeleteLight"
-
-                        android:onClick="backspaceClick"
-                        android:text="@string/_Backspace" />
-
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:weightSum="5">
-
-
-                    <Button
-                        android:id="@+id/btn_multiple"
-                        style="@style/buttonOperationMultiplyLight"
-
-                        android:text="@string/_Multiple" />
-
-                    <Button
-                        android:id="@+id/btn_minus"
-
-                        style="@style/buttonOperationMinusLight"
-
-
-                        android:text="@string/_Minus" />
-
-                    <Button
-                        android:id="@+id/btn_plus"
-                        style="@style/buttonOperationPlusLight"
-
-
-                        android:text="@string/_Plus" />
-
-
-                    <Button
-                        android:id="@+id/btn_equal"
-                        style="@style/buttonOperationEqualLight"
-
-                        android:text="@string/_Equal"
-
-                        />
-
-
-                </LinearLayout>
-
-            </LinearLayout>
-    <ListView
-        android:id="@+id/drawerList"
-        android:layout_width="200dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#ffeeeeee"/>
-
-    </androidx.drawerlayout.widget.DrawerLayout>
-
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-
-
-
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context=".ThemeClass">
+
+    <fragment
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/main_graph" />
+
+</FrameLayout>
