--- a/app/src/main/res/layout/activity_light_fragment.xml
+++ b/app/src/main/res/layout/activity_light_fragment.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
 
-                                              xmlns:tools="http://schemas.android.com/tools"
+                                                   xmlns:tools="http://schemas.android.com/tools"
 
-                                              style="@style/colorAppBackgroundDarkT"
-                                              android:layout_width="fill_parent"
-                                              android:layout_height="fill_parent"
-                                              android:gravity="right"
-                                              android:orientation="vertical"
-                                              android:weightSum="7"
+                                                   style="@style/colorAppBackgroundDarkT"
+                                                   android:layout_width="fill_parent"
+                                                   android:layout_height="fill_parent"
+                                                   android:gravity="end"
+                                                   android:orientation="vertical"
+                                                   android:weightSum="7"
 
-                                              tools:context=".MainActivity"
+                                                   tools:context=".ThemeClass"
 
 >
 
@@ -85,7 +85,7 @@
                     android:orientation="vertical">
 
                 <Button
-                        android:id="@+id/btn_delete"
+                        android:id="@+id/btn_reset"
                         style="@style/buttonDeleteDarkT"
 
                         android:maxLines="1"
@@ -295,9 +295,4 @@
     </androidx.drawerlayout.widget.DrawerLayout>
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
-
-
-
-
-
+</androidx.constraintlayout.widget.LinearLayoutCompat>
