--- a/app/src/main/res/layout/themes_menu.xml
+++ b/app/src/main/res/layout/themes_menu.xml
@@ -29,7 +29,7 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"/>
     <Button
-            android:id="@+id/button"
+            android:id="@+id/light_theme_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -40,14 +40,14 @@
             android:layout_marginEnd="8dp"/>
 
     <Button
-            android:id="@+id/button2"
+            android:id="@+id/dark_theme_button"
             android:layout_width="wrap_content"
             android:layout_height="51dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
             android:text="Dark"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/light_theme_button" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"/>
 
     <TextView
@@ -78,7 +78,7 @@
             android:layout_marginStart="8dp"
             android:textSize="24dp"
             android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@+id/button2"/>
+            app:layout_constraintTop_toBottomOf="@+id/dark_theme_button"/>
 
     <SeekBar
             android:layout_width="wrap_content"
